Another attempt to fix the whitespace issue

--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -24,7 +24,8 @@
 }
 
 .CounterPanel {
-    padding: 2.5vh;
+    max-width: 100vw;
+    padding: 2vh;
     height: 80vh;   
     display: flex;
     align-items: center;
@@ -42,8 +43,8 @@
 
 .Counter {
     font-family: 'Karla';
-    font-size: 36pt;
-    color: #ffffff;
+    font-size: 26pt;
+    color: sandybrown;
 }
 
 .ContentPanel {
@@ -61,6 +62,10 @@
 
 .ContentPanel div {
     padding: 2.5vh;
+}
+
+.TopRow {
+    max-width: 100vw;
 }
 
 .BottomRow {
